# performance-talk

./: .gitignore  index.html  package-lock.json  program.prof  todo.txt
boids-py/: main.py
boids-rs/: Cargo.toml
boids-rs/src/: default_impl.rs  main.rs  multithreaded_impl.rs  util.rs
boids-simd-rs/: Cargo.toml
boids-simd-rs/src/: boids_impl.rs  main.rs
demo_helpers/: demo1.ps1  demo10_rust_mt2.ps1  demo11_rust_simd.ps1  demo12_rust_simd2.ps1  demo13_final.ps1  demo2_py_profile.ps1  demo3_rust_boids_default.ps1  demo4_rust_boids_release.ps1  demo5_rust_more_boids.ps1  demo6_rust_no_cold_data.ps1  demo7_rust_no_boxing.ps1  demo8_rust_pre_square.ps1  demo9_rust_mt.ps1
ex1-rs/: Cargo.toml
ex1-rs/src/: main.rs
example-1-merging-histograms/: common.py  generate_data.py  merge.py
py-traces/: ready.prof
rs-traces/: default-1000b-trace.tracy
talk/: index.html  package-lock.json  package.json  todo.txt
