[package]
name = "boids-simd-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
ggez = "0.9.3"
glam = { version = "0.29.0", features = ["mint"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"
seq-macro = "0.3.5"
tracy-client = { version = "0.17.3", features = [
    "system-tracing",
    "context-switch-tracing",
    "sampling",
    "code-transfer",
    "broadcast",
    "callstack-inlines",
] }
tracy-client-sys = "0.24.0"

[features]
default = []
threaded = []
static_update = []
profile = ["tracy-client/enable"]

